json_parser/src/snapshots/json_parser__parser__tests__parse_invalid_number.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
---
Err(
    ExpectedTokenError {
        expected: [
            Number,
        ],
        actual: Illegal,
        origin: "4eee",
        row: 3,
        column: 20,
    },
)
