json_parser/src/snapshots/json_parser__parser__tests__parse_invalid_octal.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
---
Err(
    ExpectedTokenError {
        expected: [
            String,
            Number,
            True,
            False,
            Null,
            LBrace,
            LBracket,
        ],
        actual: Illegal,
        origin: "029",
        row: 2,
        column: 37,
    },
)
