json_parser/src/snapshots/json_parser__parser__tests__parse_invalid_utf8.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
---
Err(
    ExpectedTokenError {
        expected: [
            Comma,
            RBrace,
        ],
        actual: Illegal,
        origin: "è",
        row: 3,
        column: 18,
    },
)
