json_parser/src/snapshots/json_parser__parser__tests__parse_test_data@event_stacktrace_10kb.json.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/event_stacktrace_10kb.json
snapshot_kind: text
---
Ok(
    Object(
        [
            JsonProperty {
                key: "@t",
                value: String(
                    "2020-02-07T19:34:57.3431468Z",
                ),
            },
            JsonProperty {
                key: "@mt",
                value: String(
                    "Connection id “{ConnectionId}”, Request id “{TraceIdentifier}”: An unhandled exception was thrown by the application.",
                ),
            },
            JsonProperty {
                key: "@m",
                value: String(
                    "Connection id \\\"0HLTC0J80T1UV\\\", Request id \\\"0HLTC0J80T1UV:00000001\\\": An unhandled exception was thrown by the application.",
                ),
            },
            JsonProperty {
                key: "@i",
                value: String(
                    "42956a2f",
                ),
            },
            JsonProperty {
                key: "@l",
                value: String(
                    "Error",
                ),
            },
            JsonProperty {
                key: "@x",
                value: String(
                    "System.Security.Cryptography.CryptographicException: An error occurred while trying to encrypt the provided data. Refer to the inner exception for more information.\\n ---> Npgsql.NpgsqlException (0x80004005): Exception while connecting\\n ---> System.Net.Internals.SocketExceptionFactory+ExtendedSocketException (111): Connection refused /sql/myapp-production:myapp/.s.PGSQL.5432\\n   at System.Net.Sockets.Socket.DoConnect(EndPoint endPointSnapshot, SocketAddress socketAddress)\\n   at System.Net.Sockets.Socket.Connect(EndPoint remoteEP)\\n   at Npgsql.NpgsqlConnector.Connect(NpgsqlTimeout timeout)\\n   at Npgsql.NpgsqlConnector.Connect(NpgsqlTimeout timeout)\\n   at Npgsql.NpgsqlConnector.RawOpen(NpgsqlTimeout timeout, Boolean async, CancellationToken cancellationToken)\\n   at Npgsql.NpgsqlConnector.Open(NpgsqlTimeout timeout, Boolean async, CancellationToken cancellationToken)\\n   at Npgsql.ConnectorPool.AllocateLong(NpgsqlConnection conn, NpgsqlTimeout timeout, Boolean async, CancellationToken cancellationToken)\\n   at Npgsql.NpgsqlConnection.<>c__DisplayClass32_0.<<Open>g__OpenLong|0>d.MoveNext()\\n--- End of stack trace from previous location where exception was thrown ---\\n   at Npgsql.NpgsqlConnection.Open()\\n   at MyApp.Web.Infrastructure.DataProtection.PostgresDataProtectionXmlRepository.GetAllElements() in /src/MyApp.Web/Infrastructure/DataProtection/PostgresDataProtectionXmlRepository.cs:line 29\\n   at Microsoft.AspNetCore.DataProtection.KeyManagement.XmlKeyManager.GetAllKeys()\\n   at Microsoft.AspNetCore.DataProtection.KeyManagement.KeyRingProvider.CreateCacheableKeyRingCore(DateTimeOffset now, IKey keyJustAdded)\\n   at Microsoft.AspNetCore.DataProtection.KeyManagement.KeyRingProvider.Microsoft.AspNetCore.DataProtection.KeyManagement.Internal.ICacheableKeyRingProvider.GetCacheableKeyRing(DateTimeOffset now)\\n   at Microsoft.AspNetCore.DataProtection.KeyManagement.KeyRingProvider.GetCurrentKeyRingCore(DateTime utcNow, Boolean forceRefresh)\\n   at Microsoft.AspNetCore.DataProtection.KeyManagement.KeyRingProvider.GetCurrentKeyRing()\\n   at Microsoft.AspNetCore.DataProtection.KeyManagement.KeyRingBasedDataProtector.Protect(Byte[] plaintext)\\n   --- End of inner exception stack trace ---\\n   at Microsoft.AspNetCore.DataProtection.KeyManagement.KeyRingBasedDataProtector.Protect(Byte[] plaintext)\\n   at Microsoft.AspNetCore.Antiforgery.DefaultAntiforgeryTokenSerializer.Serialize(AntiforgeryToken token)\\n   at Microsoft.AspNetCore.Antiforgery.DefaultAntiforgery.Serialize(IAntiforgeryFeature antiforgeryFeature)\\n   at Microsoft.AspNetCore.Antiforgery.DefaultAntiforgery.GetAndStoreTokens(HttpContext httpContext)\\n   at Microsoft.AspNetCore.Mvc.ViewFeatures.AntiforgeryExtensions.GetHtml(IAntiforgery antiforgery, HttpContext httpContext)\\n   at Microsoft.AspNetCore.Mvc.ViewFeatures.DefaultHtmlGenerator.GenerateAntiforgery(ViewContext viewContext)\\n   at Microsoft.AspNetCore.Mvc.TagHelpers.FormTagHelper.Process(TagHelperContext context, TagHelperOutput output)\\n   at Microsoft.AspNetCore.Razor.TagHelpers.TagHelper.ProcessAsync(TagHelperContext context, TagHelperOutput output)\\n   at Microsoft.AspNetCore.Razor.Runtime.TagHelpers.TagHelperRunner.RunAsync(TagHelperExecutionContext executionContext)\\n   at AspNetCore.Areas_None_Shared__Footer.ExecuteAsync() in /src/MyApp.Web/Areas/None/Shared/_Footer.cshtml:line 30\\n   at Microsoft.AspNetCore.Mvc.Razor.RazorView.RenderPageCoreAsync(IRazorPage page, ViewContext context)\\n   at Microsoft.AspNetCore.Mvc.Razor.RazorView.RenderPageAsync(IRazorPage page, ViewContext context, Boolean invokeViewStarts)\\n   at Microsoft.AspNetCore.Mvc.Razor.RazorView.RenderAsync(ViewContext context)\\n   at Microsoft.AspNetCore.Mvc.TagHelpers.PartialTagHelper.RenderPartialViewAsync(TextWriter writer, Object model, IView view)\\n   at Microsoft.AspNetCore.Mvc.TagHelpers.PartialTagHelper.ProcessAsync(TagHelperContext context, TagHelperOutput output)\\n   at Microsoft.AspNetCore.Razor.Runtime.TagHelpers.TagHelperRunner.<RunAsync>g__Awaited|0_0(Task task, TagHelperExecutionContext executionContext, Int32 i, Int32 count)\\n   at AspNetCore.Areas_None_Shared__Layout.<ExecuteAsync>b__19_1() in /src/MyApp.Web/Areas/None/Shared/_Layout.cshtml:line 30\\n   at Microsoft.AspNetCore.Razor.Runtime.TagHelpers.TagHelperExecutionContext.SetOutputContentAsync()\\n   at AspNetCore.Areas_None_Shared__Layout.ExecuteAsync() in /src/MyApp.Web/Areas/None/Shared/_Layout.cshtml:line 24\\n   at Microsoft.AspNetCore.Mvc.Razor.RazorView.RenderPageCoreAsync(IRazorPage page, ViewContext context)\\n   at Microsoft.AspNetCore.Mvc.Razor.RazorView.RenderPageAsync(IRazorPage page, ViewContext context, Boolean invokeViewStarts)\\n   at Microsoft.AspNetCore.Mvc.Razor.RazorView.RenderLayoutAsync(ViewContext context, ViewBufferTextWriter bodyWriter)\\n   at Microsoft.AspNetCore.Mvc.Razor.RazorView.RenderAsync(ViewContext context)\\n   at Microsoft.AspNetCore.Mvc.ViewFeatures.ViewExecutor.ExecuteAsync(ViewContext viewContext, String contentType, Nullable`1 statusCode)\\n   at Microsoft.AspNetCore.Mvc.ViewFeatures.ViewExecutor.ExecuteAsync(ViewContext viewContext, String contentType, Nullable`1 statusCode)\\n   at Microsoft.AspNetCore.Mvc.ViewFeatures.ViewExecutor.ExecuteAsync(ActionContext actionContext, IView view, ViewDataDictionary viewData, ITempDataDictionary tempData, String contentType, Nullable`1 statusCode)\\n   at Microsoft.AspNetCore.Mvc.ViewFeatures.ViewResultExecutor.ExecuteAsync(ActionContext context, ViewResult result)\\n   at Microsoft.AspNetCore.Mvc.ViewResult.ExecuteResultAsync(ActionContext context)\\n   at Microsoft.AspNetCore.Mvc.Infrastructure.ResourceInvoker.<InvokeNextResultFilterAsync>g__Awaited|29_0[TFilter,TFilterAsync](ResourceInvoker invoker, Task lastTask, State next, Scope scope, Object state, Boolean isCompleted)\\n   at Microsoft.AspNetCore.Mvc.Infrastructure.ResourceInvoker.Rethrow(ResultExecutedContextSealed context)\\n   at Microsoft.AspNetCore.Mvc.Infrastructure.ResourceInvoker.ResultNext[TFilter,TFilterAsync](State& next, Scope& scope, Object& state, Boolean& isCompleted)\\n   at Microsoft.AspNetCore.Mvc.Infrastructure.ResourceInvoker.InvokeResultFilters()\\n--- End of stack trace from previous location where exception was thrown ---\\n   at Microsoft.AspNetCore.Mvc.Infrastructure.ResourceInvoker.<InvokeNextResourceFilter>g__Awaited|24_0(ResourceInvoker invoker, Task lastTask, State next, Scope scope, Object state, Boolean isCompleted)\\n   at Microsoft.AspNetCore.Mvc.Infrastructure.ResourceInvoker.Rethrow(ResourceExecutedContextSealed context)\\n   at Microsoft.AspNetCore.Mvc.Infrastructure.ResourceInvoker.Next(State& next, Scope& scope, Object& state, Boolean& isCompleted)\\n   at Microsoft.AspNetCore.Mvc.Infrastructure.ResourceInvoker.InvokeFilterPipelineAsync()\\n--- End of stack trace from previous location where exception was thrown ---\\n   at Microsoft.AspNetCore.Mvc.Infrastructure.ResourceInvoker.<InvokeAsync>g__Awaited|17_0(ResourceInvoker invoker, Task task, IDisposable scope)\\n   at Microsoft.AspNetCore.Routing.EndpointMiddleware.<Invoke>g__AwaitRequestTask|6_0(Endpoint endpoint, Task requestTask, ILogger logger)\\n   at MyApp.Web.Areas.None.Shared.Components.Toaster.ToasterMiddleware.InvokeAsync(HttpContext context, RequestDelegate next) in /src/MyApp.Web/Areas/None/Shared/Components/Toaster/ToasterMiddleware.cs:line 43\\n   at Microsoft.AspNetCore.Builder.UseMiddlewareExtensions.<>c__DisplayClass5_1.<<UseMiddlewareInterface>b__1>d.MoveNext()\\n--- End of stack trace from previous location where exception was thrown ---\\n   at MyApp.Web.Infrastructure.Users.CurrentUserMiddleware.InvokeAsync(HttpContext context, RequestDelegate next) in /src/MyApp.Web/Infrastructure/Users/CurrentUserMiddleware.cs:line 23\\n   at Microsoft.AspNetCore.Builder.UseMiddlewareExtensions.<>c__DisplayClass5_1.<<UseMiddlewareInterface>b__1>d.MoveNext()\\n--- End of stack trace from previous location where exception was thrown ---\\n   at Microsoft.AspNetCore.Authentication.AuthenticationMiddleware.Invoke(HttpContext context)\\n   at Serilog.AspNetCore.RequestLoggingMiddleware.Invoke(HttpContext httpContext)\\n   at Microsoft.AspNetCore.Diagnostics.StatusCodePagesMiddleware.Invoke(HttpContext context)\\n   at Microsoft.AspNetCore.Builder.UseMiddlewareExtensions.<>c__DisplayClass5_1.<<UseMiddlewareInterface>b__1>d.MoveNext()\\n--- End of stack trace from previous location where exception was thrown ---\\n   at MyApp.Web.MyAppWebHost.<>c.<<Build>b__1_14>d.MoveNext() in /src/MyApp.Web/MyAppWebHost.cs:line 155\\n--- End of stack trace from previous location where exception was thrown ---\\n   at Microsoft.AspNetCore.Diagnostics.ExceptionHandlerMiddleware.<Invoke>g__Awaited|6_0(ExceptionHandlerMiddleware middleware, HttpContext context, Task task)\\n   at Microsoft.AspNetCore.Diagnostics.ExceptionHandlerMiddleware.HandleException(HttpContext context, ExceptionDispatchInfo edi)\\n   at Microsoft.AspNetCore.Diagnostics.ExceptionHandlerMiddleware.<Invoke>g__\\/Awaited|6_0(ExceptionHandlerMiddleware middleware, HttpContext context, Task task)\\n   at Microsoft.AspNetCore.Server.Kestrel.Core.Internal.Http.HttpProtocol.ProcessRequests[TContext](IHttpApplication`1 application)",
                ),
            },
            JsonProperty {
                key: "ConnectionId",
                value: String(
                    "0HLTC0J80T1UV",
                ),
            },
            JsonProperty {
                key: "TraceIdentifier",
                value: String(
                    "0HLTC0J80T1UV:00000001",
                ),
            },
            JsonProperty {
                key: "EventId",
                value: Object(
                    [
                        JsonProperty {
                            key: "Id",
                            value: Number(
                                13.0,
                            ),
                        },
                        JsonProperty {
                            key: "Name",
                            value: String(
                                "ApplicationError",
                            ),
                        },
                    ],
                ),
            },
            JsonProperty {
                key: "SourceContext",
                value: String(
                    "Microsoft.AspNetCore.Server.Kestrel",
                ),
            },
            JsonProperty {
                key: "RequestId",
                value: String(
                    "0HLTC0J80T1UV:00000001",
                ),
            },
            JsonProperty {
                key: "RequestPath",
                value: String(
                    "😎",
                ),
            },
            JsonProperty {
                key: "SpanId",
                value: String(
                    "|16fd0678-4b69eb5e5897888c.",
                ),
            },
            JsonProperty {
                key: "TraceId",
                value: String(
                    "16fd0678-4b69eb5e5897888c",
                ),
            },
            JsonProperty {
                key: "ParentId",
                value: String(
                    "",
                ),
            },
            JsonProperty {
                key: "Application",
                value: String(
                    "MyApp.Web",
                ),
            },
            JsonProperty {
                key: "ImageVersion",
                value: String(
                    "1.0.673",
                ),
            },
            JsonProperty {
                key: "Site",
                value: String(
                    "Production",
                ),
            },
        ],
    ),
)
