json_parser/src/snapshots/json_parser__parser__tests__parse_top_level_array.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
snapshot_kind: text
---
Ok(
    Array(
        [
            Object(
                [
                    JsonProperty {
                        key: "one",
                        value: Number(
                            1.0,
                        ),
                    },
                    JsonProperty {
                        key: "zero",
                        value: Number(
                            0.0,
                        ),
                    },
                ],
            ),
        ],
    ),
)
