json_parser/src/snapshots/json_parser__parser__tests__parse_valid_decimal.snap
---
source: json_parser/src/parser.rs
expression: parser.parse(&bump)
snapshot_kind: text
---
Ok(
    Array(
        [
            Number(
                -65619720000000.62,
            ),
            Number(
                0.29,
            ),
        ],
    ),
)
